@@ -32,24 +32,25 @@ ___
 Na raiz do projeto:
 
 ```bash
-javac -d out src/*.java src/*/*.java
+javac --enable-preview --release 26 -d out src/*.java src/*/*.java
 ```
 
-O padrão `src/*/*.java` compila todas as versões existentes (v1–v4). Os `.class` são gerados no diretório `out/`.
+O padrão `src/*/*.java` compila todas as versões existentes (v1–v4). Os `.class` são gerados no diretório `out/`. O flag `--enable-preview` é obrigatório porque a v3 usa `StructuredTaskScope`, que é API preview no JDK 26.
 
 ### 2. Executar uma versão
 
 Cada versão tem seu próprio `main` com menu interativo:
 
 ```bash
-java -cp out Main                    # versão base fornecida pelo professor (sequencial)
-java -cp out v1.Sequencial           # v1 — baseline sequencial
-java -cp out v2.NaoEstruturada       # v2 — paralelismo não estruturado (ExecutorService)
-java -cp out v3.Estruturado          # v3 — paralelismo estruturado (StructuredTaskScope)
-java -cp out v4.EstadoCompartilhado  # v4 — estado compartilhado (AtomicInteger / coleção concorrente)
+java -cp out Main                           # versão base fornecida pelo professor (sequencial)
+java -cp out v1.Sequencial                  # v1 — baseline sequencial
+java -cp out v2.NaoEstruturada              # v2 — paralelismo não estruturado (ExecutorService)
+java --enable-preview -cp out v3.Estruturada    # v3 — paralelismo estruturado (StructuredTaskScope)
+java -cp out v4.EstadoCompartilhado         # v4 — estado compartilhado (AtomicInteger / coleção concorrente)
 ```
 
-> **Nota:** v3 e v4 ainda estão em desenvolvimento — os comandos acima já estão previstos para quando forem implementadas.
+> **Nota:** a v3 exige `--enable-preview` também na execução. A v4 ainda está em desenvolvimento — o comando acima já está previsto para quando for implementada.
+```
 
 No menu, escolha o tamanho da matriz:
 
@@ -71,7 +72,7 @@ Para rodar sem interação, envie as opções pela entrada padrão:
 # uma execução da matriz 500x500 em cada versão
 printf '1\n0\n' | java -cp out v1.Sequencial
 printf '1\n0\n' | java -cp out v2.NaoEstruturada
-printf '1\n0\n' | java -cp out v3.Estruturado
+printf '1\n0\n' | java --enable-preview -cp out v3.Estruturada
 printf '1\n0\n' | java -cp out v4.EstadoCompartilhado
 ```
 
@@ -84,7 +85,7 @@ printf '1\n0\n' | java -cp out v4.EstadoCompartilhado
 | 1500×1500 | 11382145.478991    |
 | 2000×2000 | 20234925.296071    |
 
-Se alguma versão paralela produzir valor diferente da baseline, há problema na implementação.
+Se alguma versão paralela produzir valor diferente da baseline, há problema na implementação — com uma exceção: as versões que acumulam somas parciais por linha (v2, v3) reassociam as operações de ponto flutuante e podem diferir da baseline nas últimas casas decimais. Isso é esperado e não indica erro. Referências para v2/v3: 500×500 → `1264682.830999`, 1000×1000 → `5058731.323995`, 1500×1500 → `11382145.478988`, 2000×2000 → `20234925.295979`.
 
 Para reproduzir a metodologia da seção [Resultados](#resultados) (10 rodadas por configuração, média aritmética), repita a opção desejada 10 vezes antes do `0`:
 
@@ -102,7 +103,7 @@ src/
 ├── v2/
 │   └── NaoEstruturada.java      # calcular() + processarParalelo() com ExecutorService/threads manuais
 ├── v3/
-│   └── Estruturado.java         # calcular() + processarEstruturado() com StructuredTaskScope
+│   └── Estruturada.java         # calcular() + processar() com StructuredTaskScope
 └── v4/
     └── EstadoCompartilhado.java # calcular() + duas variantes: AtomicInteger e ConcurrentLinkedQueue
 
@@ -129,17 +130,33 @@ flowchart TD
     C -->|todas as colunas processadas| B
     B -->|todas as linhas processadas| F[Resultado final]
 ```
-### V2 - Não Estruturada
 
+### V2 - Não Estruturada
 ```mermaid
 flowchart TD
-    A[Matriz de entrada] --> B[Para cada elemento i,j]
-    B --> C["executor.submit: calcular(matriz[i][j])"]
-    C --> D[Future adicionado à lista]
-    D --> B
-    B -->|todos os elementos submetidos| E["Aguarda cada Future: future.get()"]
-    E --> F[Soma dos resultados parciais]
-    F --> G[Resultado final]
+    A[Matriz de entrada] --> B[Cria ExecutorService com pool fixo]
+    B --> C[Para cada linha i]
+    C --> D["executor.submit: soma calcular() da linha i"]
+    D --> E[Future adicionado à lista]
+    E --> C
+    C -->|todas as linhas submetidas| F[Itera lista de Futures]
+    F --> G["future.get() — try/catch individual por linha"]
+    G --> H[Soma dos resultados parciais]
+    H --> I[executor.shutdown]
+    I --> J[Resultado final]
+```
+
+### V3 - Estruturada
+```mermaid
+flowchart TD
+    A[Matriz de entrada] --> B[StructuredTaskScope.open]
+    B --> C[Para cada linha i]
+    C --> D["scope.fork: soma calcular() da linha i"]
+    D --> C
+    C -->|todas as linhas forkadas| E[scope.join]
+    E --> F[Itera subtasks: subtask.get]
+    F --> G[Soma dos resultados parciais]
+    G --> H[Resultado final]
 ```
 
 ___
@@ -154,8 +171,8 @@ Dados brutos de todas as execuções em [`resultados/experimentos.csv`](resultad
 | Implementação                          | Tarefas   | Tempo médio (ms) | Speedup | Resultado correto |
 |-----------------------------------------|-----------|-------------------|---------|--------------------|
 | Sequencial                              | -         | 1901.961          | 1.00    | -                  |
-| Paralelismo não estruturado             | 250.000   | 384.121           | 4.95    | ✓                  |
-| Paralelismo estruturado                 |           |                   |         |                    |
+| Paralelismo não estruturado             | 500       | 315.730           | 6.02    | ✓                  |
+| Paralelismo estruturado                 | 500       | 338.520           | 5.62    | ✓                  |
 | Estruturado + AtomicInteger             |           |                   |         |                    |
 | Estruturado + coleção concorrente       |           |                   |         |                    |
 
@@ -164,8 +181,8 @@ Dados brutos de todas as execuções em [`resultados/experimentos.csv`](resultad
 | Implementação                          | Tarefas   | Tempo médio (ms) | Speedup | Resultado correto |
 |-----------------------------------------|-----------|-------------------|---------|--------------------|
 | Sequencial                              | -         | 7575.528          | 1.00    | -                  |
-| Paralelismo não estruturado             | 1.000.000 | 1738.497          | 4.36    | ✓                  |
-| Paralelismo estruturado                 |           |                   |         |                    |
+| Paralelismo não estruturado             | 1.000     | 1286.758          | 5.89    | ✓                  |
+| Paralelismo estruturado                 | 1.000     | 1405.512          | 5.39    | ✓                  |
 | Estruturado + AtomicInteger             |           |                   |         |                    |
 | Estruturado + coleção concorrente       |           |                   |         |                    |
 
@@ -174,8 +191,8 @@ Dados brutos de todas as execuções em [`resultados/experimentos.csv`](resultad
 | Implementação                          | Tarefas   | Tempo médio (ms) | Speedup | Resultado correto |
 |-----------------------------------------|-----------|-------------------|---------|--------------------|
 | Sequencial                              | -         | 17093.514         | 1.00    | -                  |
-| Paralelismo não estruturado             | 2.250.000 | 3903.985          | 4.38    | ✓                  |
-| Paralelismo estruturado                 |           |                   |         |                    |
+| Paralelismo não estruturado             | 1.500     | 3240.849          | 5.27    | ✓                  |
+| Paralelismo estruturado                 | 1.500     | 3314.722          | 5.16    | ✓                  |
 | Estruturado + AtomicInteger             |           |                   |         |                    |
 | Estruturado + coleção concorrente       |           |                   |         |                    |
 
@@ -184,15 +201,16 @@ Dados brutos de todas as execuções em [`resultados/experimentos.csv`](resultad
 | Implementação                          | Tarefas   | Tempo médio (ms) | Speedup | Resultado correto |
 |-----------------------------------------|-----------|-------------------|---------|--------------------|
 | Sequencial                              | -         | 30289.086         | 1.00    | -                  |
-| Paralelismo não estruturado             | 4.000.000 | 9602.464          | 3.15    | ✓                  |
-| Paralelismo estruturado                 |           |                   |         |                    |
+| Paralelismo não estruturado             | 2.000     | 5799.812          | 5.22    | ✓                  |
+| Paralelismo estruturado                 | 2.000     | 6292.796          | 4.81    | ✓                  |
 | Estruturado + AtomicInteger             |           |                   |         |                    |
 | Estruturado + coleção concorrente       |           |                   |         |                    |
 
 ### Observações
 
-- O resultado final é idêntico entre a versão sequencial e a não estruturada nos quatro tamanhos de matriz (ex.: E1 = `1264682.830998` em ambas), confirmando a corretude da paralelização.
-- O speedup cai de ~4,4–4,95 para 3,15 no E4. A causa é a granularidade fina da v2 (uma tarefa por elemento): com 4 milhões de microtarefas, o custo de escalonamento e de alocação dos `Future`s passa a dominar parte do tempo de execução.
+- A v2 foi refatorada de uma tarefa por elemento para **uma tarefa por linha**, e o efeito no speedup foi direto: no E4 subiu de 3,15 para 5,22 (antes: 4 milhões de microtarefas; agora: 2.000 tarefas); no E1, de 4,95 para 6,02.
+- A v3 (estruturada) usa a mesma granularidade da v2 (uma subtarefa por linha) e ficou consistentemente um pouco atrás (≈5–8%). A causa provável é o modelo de threads: o `StructuredTaskScope` dispara uma virtual thread por subtarefa, enquanto a v2 usa um pool fixo de threads de plataforma dimensionado pelo número de núcleos — para carga CPU-bound, o pool fixo tem menos overhead de agendamento. Em troca, a v3 garante que todas as subtarefas terminem antes do escopo fechar e propaga falhas automaticamente, sem gerenciamento manual de `shutdown()` e `Future`s.
+- As versões v2/v3 acumulam somas parciais por linha, o que reassocia as operações de ponto flutuante: os resultados podem diferir da baseline nas últimas casas decimais (ex.: E1 → v1 = `1264682.830998`, v2/v3 = `1264682.830999`). É esperado e não indica erro.
 
 
 
